--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,19 +7,7 @@
     <title>Registro de Usuarios - Sistema Beta v1.2.3</title>
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- codigo viejo del diseño anterior -->
-    <!-- <style>
-        body {
-            background-color: #f0f0f0;
-        }
-        .old-header {
-            background-color: #ff6b6b;
-            color: white;
-        }
-        .deprecated-button {
-            background-color: #4ecdc4;
-        }
-    </style> -->
+    <!--Se elimino codigo antiguo-->
 </head>
 <body class="bg-light">
     <div class="container py-5">
@@ -32,11 +21,13 @@
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="nombre" class="form-label">Nombre(s)</label>
-                            <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
+                            <!-- Cambio: Agregado required para validación obligatoria -->
+                            <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre" required>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="apellido1" class="form-label">Primer Apellido</label>
-                            <input type="text" class="form-control" id="apellido1" placeholder="Primer apellido">
+                            <!-- Cambio: Agregado required para validación obligatoria -->
+                            <input type="text" class="form-control" id="apellido1" placeholder="Primer apellido" required>
                         </div>
                     </div>
 
@@ -47,29 +38,33 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="telefono" class="form-label">Teléfono</label>
-                            <input type="text" class="form-control" id="telefono" placeholder="10 dígitos">
+                            <!-- Cambio: oninput para eliminar caracteres no numéricos en tiempo real -->
+                            <input type="tel" class="form-control" id="telefono" inputmode="numeric" maxlength="10" placeholder="10 dígitos" pattern="[0-9]{10}" oninput="this.value = this.value.replace(/[^0-9]/g, '')" title="Solo números" required>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="curp" class="form-label">CURP</label>
-                            <input type="text" class="form-control" id="curp" placeholder="18 caracteres">
+                            <!-- Cambio: Agregado minlength, maxlength y required para validación segura -->
+                            <input type="text" class="form-control" id="curp" placeholder="18 caracteres" minlength="18" maxlength="18" required>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="email" class="form-label">Correo Electrónico</label>
-                            <input type="text" class="form-control" id="email" placeholder="ejemplo@correo.com">
+                            <!-- Cambio: type="text" a type="email" para validación nativa y prevenir inyecciones -->
+                            <input type="email" class="form-control" id="email" placeholder="ejemplo@correo.com" required>
                         </div>
                     </div>
 
-                    <!--
+                    
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="password" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="password">
+                            <!-- Cambio: Agregado minlength="8" y required para forzar contraseñas seguras -->
+                            <input type="password" class="form-control" id="password" minlength="8" required>
                         </div>
                     </div>
-                    -->
+                
 
                     <div class="d-grid gap-2">
                         <button type="submit" class="btn btn-primary btn-lg">
@@ -113,3 +108,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
